fix: fix the site margin on mobile design

--- a/_sass/2-layouts/_default.scss
+++ b/_sass/2-layouts/_default.scss
@@ -14,5 +14,6 @@
    position: fixed;
    top: 0;
    width: 100%;
+   height: 100%;
    z-index: 999;
  }
