--- a/_sass/2-layouts/_mediaQuery.scss
+++ b/_sass/2-layouts/_mediaQuery.scss
@@ -138,6 +138,10 @@
     &-section {
         opacity: 1;
         margin-top: $gutter;
+        &.work, &.edu{
+            margin-left: 15px;
+            margin-right: 15px;
+        }
     }
     &-title{
         margin-bottom: $gutter-small;
@@ -146,7 +150,10 @@
     &:hover > &-section:not(:hover) {
         opacity: 1;
     }
-    
+    .timeline-block{
+        padding-right: 5px;
+        padding-left: 5px;
+    }
     .timeline-block h1 {
         color: $c-secondary-color;
     }
@@ -169,9 +176,18 @@
     &-section > &-content{
         padding: 0;
     }
+    
 
 }
-    
+.detail-section{
+    &.interests{
+        .detail-content{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+}
     .pg-skill{
         
     }
@@ -185,15 +201,10 @@
     }
 
     .outer-frame{
-        width: max-content;
+        width: 100%;
         padding:$gutter-small
     }
-    .favor-list{
-        flex-direction: column;
-        li{
-            margin-bottom: $gutter-small;
-        }
-    }
+   
 }
 
 
@@ -222,8 +233,6 @@
             margin-right: 0;
         }
     }
-
-
     .detail-section{
         &.interests{
             .detail-content{
@@ -233,9 +242,15 @@
             }
         }
     }
-  
-    
-
+    .outer-frame{
+        width: fit-content;
+    }
+    .favor-list{
+        flex-direction: column;
+        li{
+            margin-bottom: $gutter-small;
+        }
+    }
     .tool-list
     {
       
